--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -14,6 +14,17 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
+
+    <ImageView
+            android:id="@+id/img_type_connection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:srcCompat="@drawable/ic_local_mode_connection" />
+
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -67,6 +78,17 @@
                 android:fontFamily="@font/play"
                 style="@style/Widget.AppCompat.CompoundButton.CheckBox" android:theme="@style/MyCheckboxTheme"/>
     </LinearLayout>
+
+    <ImageView
+            android:id="@+id/img_biometric_pass"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_submit_auth"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:srcCompat="@drawable/fingerprint_dialog_fp_to_error" />
+
     <Button
             android:text="@string/button_login"
             android:layout_width="wrap_content"
@@ -78,6 +100,7 @@
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:fontFamily="@font/play"/>
+
     <TextView
             android:text="@string/forgot_password"
             android:layout_width="wrap_content"
