--- a/app/src/main/res/layout/adapter_devices_item_layout.xml
+++ b/app/src/main/res/layout/adapter_devices_item_layout.xml
@@ -69,7 +69,7 @@
         </LinearLayout>
 
         <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_delete_device"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:background="@android:drawable/presence_busy"
