--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -44,8 +44,8 @@
                 android:ems="10"
                 android:fontFamily="@font/play"
                 android:hint="@string/hint_email"
-                android:inputType="textNoSuggestions|textEmailAddress"
-                android:text="zekart22@gmail.com"
+                android:inputType="textNoSuggestions|text"
+                android:text="test"
                 android:textAlignment="textStart"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/hint_color"
@@ -61,7 +61,7 @@
                 android:fontFamily="@font/play"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
-                android:text="12344321"
+                android:text="test"
                 android:textAlignment="textStart"
                 android:textColor="@android:color/white"
                 android:textColorHighlight="@color/red_button"
