--- a/app/src/main/res/layout/fragment_boiler_settings.xml
+++ b/app/src/main/res/layout/fragment_boiler_settings.xml
@@ -3,6 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/red_button"
         android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
@@ -11,7 +12,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/boiler_viewpager"
