--- a/app/src/main/res/layout/adapter_devices_item_layout.xml
+++ b/app/src/main/res/layout/adapter_devices_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_device_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -68,12 +69,5 @@
                     android:textColor="@android:color/white" />
         </LinearLayout>
 
-        <Button
-                android:id="@+id/btn_delete_device"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@android:drawable/presence_busy"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
