--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ua.willeco.clicon.AuthorizationActivity" android:background="@drawable/background">
+        tools:context="ua.willeco.clicon.ui.AuthorizationActivity" android:background="@drawable/background">
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" app:srcCompat="@drawable/logo_clicon_rgb"
@@ -26,13 +26,17 @@
             app:srcCompat="@drawable/ic_local_mode_connection" />
 
     <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:id="@+id/linearLayout"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <EditText
                 android:id="@+id/edt_email_auth"
@@ -45,8 +49,7 @@
                 android:fontFamily="@font/play"
                 android:hint="@string/hint_email"
                 android:inputType="textNoSuggestions|text"
-                android:text="test"
-                android:textAlignment="textStart"
+                android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/hint_color"
                 android:theme="@style/MyEditText" />
@@ -61,33 +64,41 @@
                 android:fontFamily="@font/play"
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
-                android:text="test"
-                android:textAlignment="textStart"
+                android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textColorHighlight="@color/red_button"
                 android:textColorHint="@color/hint_color"
                 android:textColorLink="@android:color/holo_green_light"
                 android:theme="@style/MyEditText" />
-        <CheckBox
-                android:text="@string/keep_authorization"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/checkBox"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginStart="30dp" android:textColor="@android:color/white"
-                android:fontFamily="@font/play"
-                style="@style/Widget.AppCompat.CompoundButton.CheckBox" android:theme="@style/MyCheckboxTheme"/>
+
     </LinearLayout>
 
     <ImageView
             android:id="@+id/img_biometric_pass"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_submit_auth"
+            app:layout_constraintStart_toEndOf="@+id/btn_submit_auth"
+            app:layout_constraintTop_toTopOf="@+id/btn_submit_auth"
+            app:srcCompat="@drawable/fingerprint_dialog_fp_to_error" />
+
+    <CheckBox
+            android:id="@+id/checkBox"
+            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/play"
+            android:text="@string/keep_authorization"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            android:theme="@style/MyCheckboxTheme"
             app:layout_constraintBottom_toTopOf="@+id/btn_submit_auth"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:srcCompat="@drawable/fingerprint_dialog_fp_to_error" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
             android:text="@string/button_login"
