--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
         android:background="@color/background_status_bar"
 
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="ua.willeco.clicon.MainActivity">
+        tools:context="ua.willeco.clicon.ui.MainActivity">
 
     <FrameLayout
             android:id="@+id/frame_container"
