--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,35 +1,27 @@
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+
+    <!-- Base application theme. -->
+    <style name="MainAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/transparent</item>
+        <item name="colorControlNormal">@android:color/white</item>
         <item name="colorPrimaryDark">@color/transparent</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
-        <item name="android:statusBarColor">@color/colorPrimary</item>
         <item name="checkboxStyle">@style/MyCheckBoxStyle</item>
-    </style>
-
-    <style name="AppThemeII" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/transparent</item>
-        <item name="colorPrimaryDark">@color/transparent</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">#16191D</item>
-        <item name="colorControlNormal">@android:color/white</item>
-        <item name="checkboxStyle">@style/MyCheckBoxStyle</item>
-    </style>
-
-    <style name="MyEditText" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">@color/edit_text</item>
-        <item name="colorControlActivated">@color/edit_text_active</item>
     </style>
 
     <style name="NavigationStyle" parent="Widget.Design.NavigationView">
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
-        <item name="android:listDivider">@color/background_status_bar</item>
         <item name="android:background">@color/background_status_bar</item>
+        <item name="android:listDivider">@color/background_status_bar</item>
+    </style>
+
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/edit_text</item>
+        <item name="colorControlActivated">@color/edit_text_active</item>
     </style>
 
     <style name="MyCheckBoxStyle" parent="Base.Widget.AppCompat.CompoundButton.CheckBox">
@@ -40,18 +32,21 @@
         <item name="colorControlNormal">#8AFFFFFF</item>
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
-    <style name="AppTheme.NoActionBar">
+    <style name="MainAppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+    <style name="UnelevatedButton" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+    </style>
 
 
     <!-- Кастомная AppTheme.Launcher. Устанавливает в качестве фона вашу drawable -->
-    <style name="AppTheme.Launcher">
+    <style name="MainAppTheme.Launcher">
         <item name="android:windowBackground">@drawable/clicon</item>
         <!-- для Android 5+ вы можете поменять цвет colorPrimaryDark, чтобы соответствовать цвету windowBackground -->
         <!-- <item name="colorPrimaryDark">@android:color/white</item> -->
     </style>
+
 </resources>
