--- a/app/src/main/res/layout/item_facility.xml
+++ b/app/src/main/res/layout/item_facility.xml
@@ -1,53 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/card_facility_item_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/rectangle_shape"
-        android:gravity="center"
-        android:orientation="vertical">
-
-    <TextView
-            android:id="@+id/txt_facility_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/bottom_line_text_view"
-            android:gravity="center"
-            android:minEms="5"
-            android:singleLine="true"
-            android:text="TextView"
-            android:textColor="@color/pure_white" />
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="5dp"
+        android:orientation="vertical"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <TextView
-                android:id="@+id/textView17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/menu_devices"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="10sp" />
-
-        <TextView
-                android:id="@+id/txt_facility_count_devices"
+                android:id="@+id/txt_facility_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/hint_color"
-                android:textSize="10sp" />
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/bottom_line_text_view"
+                android:gravity="center"
+                android:minEms="5"
+                android:singleLine="true"
+                android:text="TextView"
+                android:textColor="@color/background_status_bar" />
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+            <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/menu_devices"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="10sp" />
+
+            <TextView
+                    android:id="@+id/txt_facility_count_devices"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:textColor="@color/hint_color"
+                    android:textSize="10sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</com.google.android.material.card.MaterialCardView>
