--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-            android:id="@+id/mnuCreateFacility"
-            android:title="@string/promt_popup_create_room"
-            android:visible="true" />
+            android:id="@+id/mnuPopupChange"
+            android:title="@string/promt_popup_menu_edit"
+            app:showAsAction="ifRoom" />
     <item
-            android:id="@+id/mnuCreateDevice"
-            android:title="@string/promt_popup_create_device"
+            android:id="@+id/mnuPopupDelete"
+            android:title="@string/promt_popup_menu_delete"
             app:showAsAction="ifRoom" />
 </menu>
